Update front to use RAG planner
LLM now uses suggested recipes retrieved via embeddings from internal
dataset.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Skrypty na boku
+dev-scripts/
+
+# pobrane bazy danych
+datasets/
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
