Add images for recipes
If LLM used suggested recipe - upload its image from dataset

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       context: ./frontend
     volumes:
       - ./frontend:/app
+      - ./datasets/FoodImages:/app/Images
     ports:
       - "8501:8501"
     networks:
