--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -22,6 +22,8 @@ spec:
           envFrom:
             - secretRef:
                 name: openai-api-key
+            - secretRef:
+                name: langsmith-api-key
             - configMapRef:
                 name: backend-config
           volumeMounts:
